[gd_scene load_steps=5 format=3 uid="uid://ckotovp8cwju4"]

[ext_resource type="Script" path="res://UI/main_menu.gd" id="1_d2onx"]
[ext_resource type="Texture2D" uid="uid://une7gipolxos" path="res://art/pixel_platformer/Tilemap/tilemap-backgrounds_packed.png" id="1_tnhbf"]
[ext_resource type="FontFile" uid="uid://4yofhms5yodf" path="res://art/Fonts/PixelOperator-Bold.ttf" id="3_nsdcg"]

[sub_resource type="LabelSettings" id="LabelSettings_u5o68"]
font = ExtResource("3_nsdcg")
font_size = 64
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d2onx")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_tnhbf")
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 51.31
offset_bottom = 120.31
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="BG/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 32

[node name="Play Button" type="Button" parent="BG/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_nsdcg")
theme_override_font_sizes/font_size = 32
text = "PLAY GAME"

[node name="Instructions" type="Button" parent="BG/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_nsdcg")
theme_override_font_sizes/font_size = 32
text = "INSTRUCTIONS"

[node name="Settings" type="Button" parent="BG/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_nsdcg")
theme_override_font_sizes/font_size = 32
text = "SETTINGS"

[node name="Quit Button" type="Button" parent="BG/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_nsdcg")
theme_override_font_sizes/font_size = 32
text = "QUIT GAME"

[node name="Squiggy" type="Label" parent="BG"]
layout_mode = 2
offset_left = 154.0
offset_top = 4.45
offset_right = 495.0
offset_bottom = 73.45
text = "SQUIGGY RUN"
label_settings = SubResource("LabelSettings_u5o68")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="BG/MarginContainer/VBoxContainer/Play Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="BG/MarginContainer/VBoxContainer/Instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="BG/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="BG/MarginContainer/VBoxContainer/Quit Button" to="." method="_on_quit_button_pressed"]
